neue Bilder eingepflegt

--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -535,16 +535,16 @@ Tag der Einreichung: \datum
             \centering
             \begin{minipage}[ht]{0.49\linewidth}
                   \centering
-                  \includegraphics[width=0.7\textwidth, keepaspectratio]{./src/Längsschwinger 1D.png}
-                  \caption{Längsschwinger eindimensional}
-                  \label{fig: Längsschwinger 1d}
+                  \includegraphics[width=0.7\textwidth, keepaspectratio]{./System1.png}
+                  \caption{System 1}
+                  \label{fig: System 1}
             \end{minipage}
             \hfill
             \begin{minipage}[ht]{0.49\linewidth}
                   \centering
-                  \includegraphics[width=0.7\textwidth, keepaspectratio]{./src/Längsschwinger 2D.png}
-                  \caption{Längsschwinger zweidimensional}
-                  \label{fig: Längsschwinger 2d}
+                  \includegraphics[width=0.7\textwidth, keepaspectratio]{./System2.png}
+                  \caption{System 2}
+                  \label{fig: System 2}
             \end{minipage}
       \end{figure}
 
