Quelle Trägheitskraft hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -117,6 +117,13 @@
     urldate={2024-09-04T09:47:00}
 }
 
+@online{trägheitskraft,
+    author = {Prof. Dr.-Ing. Dr. Sabine Kunst},
+    title = {Kraft und Bewegungsänderung},
+    url = {https://www.leifiphysik.de/mechanik/kraft-und-bewegungsaenderung/grundwissen/traegheitssatz-im-beschleunigten-system},
+    urldate={2024-09-14T22:15:00}
+}
+
 @online{BildKräfteFeder,
     title={Einfachste mechanische Schwingsysteme},
     author={},
