--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -211,20 +211,24 @@ Tag der Einreichung: \datum
             \end{equation}
             Dieses Resultat wird für Kapitel \ref{sec: EW Zählung} relevant werden und kann mithilfe von Theorem \ref{thrm: allg Schur Zerlegung} gezeigt werden.
 
-            Man benötigt für die Identität von Futamura aus Theorem \ref{thrm: IdentitätFutamura} zudem eine weitere Definition:
-            \begin{definition}(Regulärer Matrix-Pencil, vgl. \cite[S. 784]{regularMatrixPencil})
+            Man benötigt für die Identität von Futamura aus Kapitel \ref{sec: Futamura} zudem eine weitere Definition:
+            \begin{definition}(Regulärer Matrix-Pencil, vgl. \cite[S. 784]{regularMatrixPencil})\\
                   \label{def: regulärer Pencil}
                   Ein Matrix-Pencil $A+\lambda B$ wird regulär genannt, wenn $A,B\in \Cnn$ und
                   $$\det(A+\lambda B)\ne 0$$ 
             \end{definition}
 
             Beachte, dass hier zwar der Matrix-Pencil mit $+$ statt $-$ angegeben wurde, aber diese Definitionen sind gleichwertig, da man $\tilde \lambda := -\lambda$ in den Matrix-Pencil einsetzen kann.
-            Diese Definition bedeutet insbesondere, dass der Matrix-Pencil regulär ist, falls B regulär ist, denn es gilt:
-            \begin{align*}
-                  B\text{ regulär} \Leftrightarrow & \rang(B)=n\Leftrightarrow |\lambda(A,B)| = n<\infty\\
-                  \Rightarrow & \exists z\in\C\setminus\lambda(A,B): \det(A+zB) \ne 0 \Leftrightarrow \AlamB \text{ regulär}
-            \end{align*}
-            Wobei (\ref{eqn: n EW äquiv rang B n}) und die Überabzählbarkeit von $\C$ verwendet wurde.
+            \begin{remark}
+                  \label{bem: B reg impl pencil reg}
+                  Diese Definition bedeutet insbesondere, dass der Matrix-Pencil regulär ist, falls B regulär ist, denn es gilt:
+                  \begin{align*}
+                        B\text{ regulär} \Leftrightarrow & \rang(B)=n\Leftrightarrow |\lambda(A,B)| = n<\infty\\
+                        \Rightarrow & \exists z\in\C\setminus\lambda(A,B): \det(A+zB) \ne 0 \Leftrightarrow \AlamB \text{ regulär}
+                  \end{align*}
+                  Wobei (\ref{eqn: n EW äquiv rang B n}) und die Überabzählbarkeit von $\C$ verwendet wurde.
+            \end{remark}
+            
 % man kann auch noch Korollar 2.3.11 (LinAlg Werner, S. 50) ansprechen
       \section{Die Schur-Zerlegung}
             In diesem Kapitel werden weitere wichtige Konzepte vorgestellt, die für Kapitel \ref{sec: Futamura} benötigt werden.
@@ -236,162 +240,162 @@ Tag der Einreichung: \datum
 
             Hier ist $Q^H$ die Adjungierte von $Q$, also die Matrix, die durch komplexe Konjugation und Transponierung von $Q$ entsteht, siehe auch \cite[S. 14]{matrixGolub}.
 
-            Mithilfe dieser Definition können nun folgende Resultate behandelt werden:
-            \begin{theorem}(vgl. Theorem 7.1.3 (Schur Decomposition)\cite[S. 313]{matrixGolub})\\
-                  \label{thrm: Schur Zerlegung}
-                  Wenn $A \in \C^{n\times n}$, dann existiert eine unitäre Matrix $Q\in\C^{n\times n}$, sodass
-                  \begin{equation}
-                        \label{eqn: Schur_Resultat}
-                        Q^H\,AQ = T = D+N
-                  \end{equation}
-                  mit $D=\diag(\lambda_1,\dots,\lambda_n)$ und $N\in\C^{n\times n}$ strikter oberer Dreiecksmatrix.
-                  Ferner kann $Q$ so gewählt werden, dass die Eigenwerte $\lambda_i$ in beliebiger Reihenfolge auf der Diagonalen auftauchen.
-            \end{theorem}
+%             \begin{theorem}(vgl. Theorem 7.1.3 (Schur Decomposition)\cite[S. 313]{matrixGolub})\\
+%                   \label{thrm: Schur Zerlegung}
+%                   Wenn $A \in \C^{n\times n}$, dann existiert eine unitäre Matrix $Q\in\C^{n\times n}$, sodass
+%                   \begin{equation}
+%                         \label{eqn: Schur_Resultat}
+%                         Q^H\,AQ = T = D+N
+%                   \end{equation}
+%                   mit $D=\diag(\lambda_1,\dots,\lambda_n)$ und $N\in\C^{n\times n}$ strikter oberer Dreiecksmatrix.
+%                   Ferner kann $Q$ so gewählt werden, dass die Eigenwerte $\lambda_i$ in beliebiger Reihenfolge auf der Diagonalen auftauchen.
+%             \end{theorem}
 
-            Um dieses Theorem zu beweisen, benötigt man ein Hilfslemma aus \cite[S.312]{matrixGolub}.
-            Das folgende Resultat wird einfachheitshalber in dem speziellen Fall vorgestellt, wie es für den Beweis von Theorem \ref{thrm: Schur Zerlegung} benötigt wird.
+%             Um dieses Theorem zu beweisen, benötigt man ein Hilfslemma aus \cite[S.312]{matrixGolub}.
+%             Das folgende Resultat wird einfachheitshalber in dem speziellen Fall vorgestellt, wie es für den Beweis von Theorem \ref{thrm: Schur Zerlegung} benötigt wird.
 
-            \begin{lemma}(vgl. Lemma 7.1.2\cite[S. 312]{matrixGolub})
-                  \label{lemma: Hilfe Schur}\\
-                  Falls ein $A\in\C^{n\times n}, \lambda\in \C$ Eigenwert von $A$ und $X\in \C^{n}$
-                  \begin{equation}
-                        \label{eqn: Hilfslemma Schur_Bed}
-                        AX = X\lambda,\qquad \rang(X)=1
-                  \end{equation}
+%             \begin{lemma}(vgl. Lemma 7.1.2\cite[S. 312]{matrixGolub})
+%                   \label{lemma: Hilfe Schur}\\
+%                   Falls ein $A\in\C^{n\times n}, \lambda\in \C$ Eigenwert von $A$ und $X\in \C^{n}$
+%                   \begin{equation}
+%                         \label{eqn: Hilfslemma Schur_Bed}
+%                         AX = X\lambda,\qquad \rang(X)=1
+%                   \end{equation}
                   
-                  erfüllen, dann existiert ein $Q\in \C^{n\times n}$ unitär, sodass
-                  $$Q^H\,AQ = T =  \begin{bmatrix}
-                        \lambda & T_{12} \\
-                        0 & T_{22} \\
-                        \end{bmatrix}$$
-                  mit $T_{22}\in \C^{(n-1)\times(n-1)}$
-            \end{lemma}
+%                   erfüllen, dann existiert ein $Q\in \C^{n\times n}$ unitär, sodass
+%                   $$Q^H\,AQ = T =  \begin{bmatrix}
+%                         \lambda & T_{12} \\
+%                         0 & T_{22} \\
+%                         \end{bmatrix}$$
+%                   mit $T_{22}\in \C^{(n-1)\times(n-1)}$
+%             \end{lemma}
 
-            Beweis:
-            Erhalte mit \cite[S. 233]{matrixGolub} eine komplexe QR-Zerlegung für $X$. Es gilt dann
-            $$X = Q\,R$$
-            mit $Q\in \C^{n \times n}$ unitär und $R = [r,0,\dots,0]^\top\in \C^n$.
-            Durch Einsetzen in (\ref{eqn: Hilfslemma Schur_Bed}) und Multiplikation mit $Q^H$ folgt
-            \begin{equation}
-                  \label{eqn: Hilfslemma_Schur_Gl}
-                  \underbrace{Q^H\,AQ}_{=:T}\ R = Q^H\,Q\ R\ \lambda
-            \end{equation}
-% man könnte hier R statt dem Vektor nutzen, dann wäre es kompakter
-            hier ist noch $T:=\begin{matrix}
-                  \begin{bmatrix}
-                        T_{11} & T_{12}\\
-                        T_{21} & T_{22}\\
-                  \end{bmatrix} & \begin{matrix}
-                  \text{\small 1} \\\text{\small{n-1}}
-                  \end{matrix} \\
-                  \begin{matrix}
-                  \text{\small 1} &  \text{  \small{n-1}}\\
-                  \end{matrix} &  \\
-                  \end{matrix}$\\
+%             Beweis:
+%             Erhalte mit \cite[S. 233]{matrixGolub} eine komplexe QR-Zerlegung für $X$. Es gilt dann
+%             $$X = Q\,R$$
+%             mit $Q\in \C^{n \times n}$ unitär und $R = [r,0,\dots,0]^\top\in \C^n$.
+%             Durch Einsetzen in (\ref{eqn: Hilfslemma Schur_Bed}) und Multiplikation mit $Q^H$ folgt
+%             \begin{equation}
+%                   \label{eqn: Hilfslemma_Schur_Gl}
+%                   \underbrace{Q^H\,AQ}_{=:T}\ R = Q^H\,Q\ R\ \lambda
+%             \end{equation}
+% % man könnte hier R statt dem Vektor nutzen, dann wäre es kompakter
+%             hier ist noch $T:=\begin{matrix}
+%                   \begin{bmatrix}
+%                         T_{11} & T_{12}\\
+%                         T_{21} & T_{22}\\
+%                   \end{bmatrix} & \begin{matrix}
+%                   \text{\small 1} \\\text{\small{n-1}}
+%                   \end{matrix} \\
+%                   \begin{matrix}
+%                   \text{\small 1} &  \text{  \small{n-1}}\\
+%                   \end{matrix} &  \\
+%                   \end{matrix}$\\
 
-            Durch Ausmultiplizieren von (\ref{eqn: Hilfslemma_Schur_Gl}) folgen die Gleichungen\\
+%             Durch Ausmultiplizieren von (\ref{eqn: Hilfslemma_Schur_Gl}) folgen die Gleichungen\\
 
-            $$\begin{aligned}
-                  T_{11}\,r =& r\,\lambda\\
-                  T_{21}\,r =& 0
-            \end{aligned}$$
+%             $$\begin{aligned}
+%                   T_{11}\,r =& r\,\lambda\\
+%                   T_{21}\,r =& 0
+%             \end{aligned}$$
 
-            und mit $\rang(X)=1 \Rightarrow X\ne 0 \Rightarrow r\ne 0$ folgt $T_{11} = \lambda,\ T_{21} = 0$.\qed
+%             und mit $\rang(X)=1 \Rightarrow X\ne 0 \Rightarrow r\ne 0$ folgt $T_{11} = \lambda,\ T_{21} = 0$.\qed
 
-            Nach \cite[S. 312]{matrixGolub} gelte ferner $\lambda(A) = \lambda(T) = \{\lambda\}\cup\lambda(T_{22})$.\\
+%             Nach \cite[S. 312]{matrixGolub} gelte ferner $\lambda(A) = \lambda(T) = \{\lambda\}\cup\lambda(T_{22})$.\\
             
 
-            Nun können wir Theorem \ref{thrm: Schur Zerlegung} beweisen.
+%             Nun können wir Theorem \ref{thrm: Schur Zerlegung} beweisen.
 
-            Beweis Theorem \ref{thrm: Schur Zerlegung} (vgl. \cite[S. 313]{matrixGolub}):
+%             Beweis Theorem \ref{thrm: Schur Zerlegung} (vgl. \cite[S. 313]{matrixGolub}):
 
-            Offenbar gilt für $n=1$:\\
-            $A$ ist ein Skalar, wodurch (\ref{eqn: Schur_Resultat}) für alle $Q$ unitär erfüllt ist.\\
-            Sei nun $n>1$ und (\ref{eqn: Schur_Resultat}) gelte für alle $k<n$, dann gilt für einen beliebigen Eigenwert $\lambda$ von $A$ und zugehörigen Eigenvektor $X$:
-            $$AX = \lambda X = X \lambda,\quad X\in \C^n, X\ne 0$$
-            Nach Lemma \ref{lemma: Hilfe Schur} existiert $U\in \C^{n\times n}$ unitär, sodass
-            $$U^H\, AU = \begin{bmatrix}
-                  \lambda & T_{12} \\
-                  0 & T_{22} \\
-                  \end{bmatrix}$$
-            Da aber $T_{22}\in\C^{(n-1)\times(n-1)}$, so gilt nach der Induktionsvoraussetzung:
-            $$\widetilde U^H\,T_{22}\widetilde U = R,$$
-            wobei $R\in\C^{(n-1)\times(n-1)}$  rechte obere Dreiecksmatrix, $\widetilde U \in\C^{(n-1)\times(n-1)}$ unitär.
+%             Offenbar gilt für $n=1$:\\
+%             $A$ ist ein Skalar, wodurch (\ref{eqn: Schur_Resultat}) für alle $Q$ unitär erfüllt ist.\\
+%             Sei nun $n>1$ und (\ref{eqn: Schur_Resultat}) gelte für alle $k<n$, dann gilt für einen beliebigen Eigenwert $\lambda$ von $A$ und zugehörigen Eigenvektor $X$:
+%             $$AX = \lambda X = X \lambda,\quad X\in \C^n, X\ne 0$$
+%             Nach Lemma \ref{lemma: Hilfe Schur} existiert $U\in \C^{n\times n}$ unitär, sodass
+%             $$U^H\, AU = \begin{bmatrix}
+%                   \lambda & T_{12} \\
+%                   0 & T_{22} \\
+%                   \end{bmatrix}$$
+%             Da aber $T_{22}\in\C^{(n-1)\times(n-1)}$, so gilt nach der Induktionsvoraussetzung:
+%             $$\widetilde U^H\,T_{22}\widetilde U = R,$$
+%             wobei $R\in\C^{(n-1)\times(n-1)}$  rechte obere Dreiecksmatrix, $\widetilde U \in\C^{(n-1)\times(n-1)}$ unitär.
 
-            Sei nun $Q:=U\cdot\begin{bmatrix}
-                  1&0\\
-                  0&\widetilde U
-            \end{bmatrix}$
+%             Sei nun $Q:=U\cdot\begin{bmatrix}
+%                   1&0\\
+%                   0&\widetilde U
+%             \end{bmatrix}$
 
-            dann gilt mit\footnote{die folgende Gleichung stammt aus \cite{conjugateTranspose}, Beweis ebenfalls dort zu finden}
-% Fussnote vielleicht scheisse platziert
-            \begin{equation}
-                  \label{eqn: Produkt Adjungierter}
-                  \klammer{AB}^H = B^HA^H,\quad A,B\in \C^{n\times n}
-            \end{equation}
-            für (\ref{eqn: Schur_Resultat}):
-            $$\begin{aligned}
-                  Q^H\,AQ =& \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U
-                  \end{bmatrix}^H\,U^H\,AU \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U
-                  \end{bmatrix} = \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U^H
-                  \end{bmatrix}
-                  \begin{bmatrix}
-                        \lambda & T_{12} \\
-                        0 & T_{22} \\
-                  \end{bmatrix}
-                  \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U
-                  \end{bmatrix}\\
-                  =& \begin{bmatrix}
-                        \lambda&T_{12}\\
-                        0&\widetilde U^H\, T_{22}
-                  \end{bmatrix}
-                  \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U
-                  \end{bmatrix}
-                  = \begin{bmatrix}
-                        \lambda&T_{12}\,\widetilde U\\
-                        0&\widetilde U^H\, T_{22}\, \widetilde U
-                  \end{bmatrix}\\
-                  =& \begin{bmatrix}
-                        \lambda&T_{12}\,\widetilde U\\
-                        0&R
-                  \end{bmatrix}
-            \end{aligned}$$
-            Wobei verwendet wurde, dass nach Definition die komplex Konjugation skalar angewendet wird\footnote{siehe \cite[S. 14]{matrixGolub}}, also es gilt:
+%             dann gilt mit\footnote{die folgende Gleichung stammt aus \cite{conjugateTranspose}, Beweis ebenfalls dort zu finden}
+% % Fussnote vielleicht scheisse platziert
+%             \begin{equation}
+%                   \label{eqn: Produkt Adjungierter}
+%                   \klammer{AB}^H = B^HA^H,\quad A,B\in \C^{n\times n}
+%             \end{equation}
+%             für (\ref{eqn: Schur_Resultat}):
+%             $$\begin{aligned}
+%                   Q^H\,AQ =& \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U
+%                   \end{bmatrix}^H\,U^H\,AU \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U
+%                   \end{bmatrix} = \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U^H
+%                   \end{bmatrix}
+%                   \begin{bmatrix}
+%                         \lambda & T_{12} \\
+%                         0 & T_{22} \\
+%                   \end{bmatrix}
+%                   \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U
+%                   \end{bmatrix}\\
+%                   =& \begin{bmatrix}
+%                         \lambda&T_{12}\\
+%                         0&\widetilde U^H\, T_{22}
+%                   \end{bmatrix}
+%                   \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U
+%                   \end{bmatrix}
+%                   = \begin{bmatrix}
+%                         \lambda&T_{12}\,\widetilde U\\
+%                         0&\widetilde U^H\, T_{22}\, \widetilde U
+%                   \end{bmatrix}\\
+%                   =& \begin{bmatrix}
+%                         \lambda&T_{12}\,\widetilde U\\
+%                         0&R
+%                   \end{bmatrix}
+%             \end{aligned}$$
+%             Wobei verwendet wurde, dass nach Definition die komplex Konjugation skalar angewendet wird\footnote{siehe \cite[S. 14]{matrixGolub}}, also es gilt:
            
-            \begin{equation}
-            \label{eqn: Adjungierte reinziehen}
-                  \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U
-                  \end{bmatrix}^H = \overline{\begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U^T
-                  \end{bmatrix}} = \begin{bmatrix}
-                        \overline{1}&0\\
-                        0&\overline{\widetilde U^T}
-                  \end{bmatrix} = \begin{bmatrix}
-                        1&0\\
-                        0&\widetilde U^H
-                  \end{bmatrix}
-            \end{equation}
+%             \begin{equation}
+%             \label{eqn: Adjungierte reinziehen}
+%                   \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U
+%                   \end{bmatrix}^H = \overline{\begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U^T
+%                   \end{bmatrix}} = \begin{bmatrix}
+%                         \overline{1}&0\\
+%                         0&\overline{\widetilde U^T}
+%                   \end{bmatrix} = \begin{bmatrix}
+%                         1&0\\
+%                         0&\widetilde U^H
+%                   \end{bmatrix}
+%             \end{equation}
 
-            Damit ist gezeigt, dass $Q^H\,AQ$ eine rechte obere Dreiecksmatrix ist.
+%             Damit ist gezeigt, dass $Q^H\,AQ$ eine rechte obere Dreiecksmatrix ist.
 
-            $D = \diag(\lambda_1,\dots,\lambda_n)$ folgt mit Korollar 4.2.3 aus \cite[S. 80]{LinAlgWerner}.
-            Die Beliebigkeit der Anordnung der Eigenwerte auf der Diagonalen erhält man durch rekursives Anwenden von Theorem \ref{thrm: Schur Zerlegung} auf die Matrix $T_{22}$.
-            Es fehlt noch zu zeigen, dass $Q$ unitär ist, was aber mit (\ref{eqn: Produkt Adjungierter}) und (\ref{eqn: Adjungierte reinziehen}) einfach gezeigt werden kann. \qed\\
+%             $D = \diag(\lambda_1,\dots,\lambda_n)$ folgt mit Korollar 4.2.3 aus \cite[S. 80]{LinAlgWerner}.
+%             Die Beliebigkeit der Anordnung der Eigenwerte auf der Diagonalen erhält man durch rekursives Anwenden von Theorem \ref{thrm: Schur Zerlegung} auf die Matrix $T_{22}$.
+%             Es fehlt noch zu zeigen, dass $Q$ unitär ist, was aber mit (\ref{eqn: Produkt Adjungierter}) und (\ref{eqn: Adjungierte reinziehen}) einfach gezeigt werden kann. \qed\\
 
-            Es wird eine weitere Schur-Zerlegung vorgestellt. Diese wird ebenfalls für den Beweis der Identität von Futamura in Kapitel \ref{sec: Futamura} benötigt.
+            Mithilfe dieser Definition kann nun die allgemeine Schur-Zerlegung vorgestellt werden.
+            Diese wird für den Beweis der Identität von Futamura in Kapitel \ref{sec: Futamura} benötigt.
 %hier kann noch viel mehr erzählt werden: die Eigenschaft der Eigenwerte ist von entscheidender Relevanz
             \begin{theorem}(Generalized Schur Decompositon, \cite[S. 377]{matrixGolub})
                   \label{thrm: allg Schur Zerlegung}
@@ -417,14 +421,17 @@ Tag der Einreichung: \datum
             Das folgende Theorem wird für das Finden einer Zielfunktion von entscheidender Relevanz sein,
             da durch diese Aussage in Kapitel \ref{sec: EW Zählung} ein Zusammenhang zwischen der Anzahl der Eigenwerte auf einem Intervall und einem Kurvenintegral über Matrizen gezeigt werden kann.
 
-            \begin{theorem}
-                  \label{thrm: IdentitätFutamura}(vgl. \cite[S. 127]{grundlageFutamura})\\
-                  Seien $A, B\in\Cnn, z\in \C$, sodass $(zB-A)$ ein regulärer Matrix-Pencil ist, dann gilt:
+            \begin{theorem}(vgl. \cite[S. 127]{grundlageFutamura})
+                  \label{thrm: IdentitätFutamura}\\
+                  Seien $A, B\in\Cnn, z\in \C$, sodass $(zB-A)$ ein regulärer Matrix-Pencil ist, dann gibt es unitäre Matrizen $Q$ und $U \in\Cnn$, sodass
+                  $$A = QTU^H,\quad B=QSU^H$$
+                  und
                   \begin{equation}
                         \label{eqn: Resultat_Futamura}
-                        \tr((zB-A)\inv B) = \sum_{j=1}^{n'} \frac{1}{z-\lambda_j},
+                        \tr((zB-A)\inv B) = \sum_{j\in N}\frac{1}{z-\lambda_j},
                   \end{equation}
-                  wobei $n'$ die Anzahl der Eigenwerte des Matrix-Pencils $(zB-A)$ und $\lambda_j$ die Eigenwerte selbst sind.
+                  gilt, wobei $N:=\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}$ und $\lambda_j$ die Eigenwerte des Matrix-Pencils sind.
+                  $S$ und $T$ sind hier obere Dreiecksmatrizen.
             \end{theorem}
 % warum zB-A? für Eigenwerte macht es keinen Unterschied
             Beweis:
@@ -432,24 +439,20 @@ Tag der Einreichung: \datum
             $$A=QTU^H,\quad B=QSU^H$$
             mit $T,S\in\Cnn$ obere Dreiecksmatrizen.
             
-            Hierbei sind zwar $S$ und $T$ obere Dreiecksmatrizen, und es gilt:
+            Hierbei sind $S$ und $T$ obere Dreiecksmatrizen, und es gilt:
             $$\lambda(B)=\lambda(S) = \{s_{ii}:i=1,\dots,n\},$$
-            aber diese Eigenwerte sind noch ungeordnet und somit gilt nicht wie in \cite{grundlageFutamura}:
+            aber diese Eigenwerte sind noch ungeordnet und man kann nicht wie in \cite{grundlageFutamura}:
             \begin{align*}
                   s_{ii} = \begin{cases}
                         \ne 0 & : i\le n'\\
                         0 & : i>n'
                   \end{cases}
             \end{align*}
-            für $n':=|\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}|$
+            annehmen für $n':=|\{i\in\{1,\dots,n\}: s_{ii}\ne 0\}|$.
 
-            Das kann aber mithilfe einer Definition umgangen werden:
+            Mithilfe der Definition
             $$N:=\{i=1,\dots,n: s_{ii}\ne 0\}$$
-            Es gilt:
-            $$s_{ii} = \begin{cases}
-                  \ne 0 & : i\in N\\
-                  0 & : i\in N^C
-            \end{cases}$$
+            kann dies aber umgangen werden.
 
             Man kann folgern:
             \begin{align*}
@@ -576,7 +579,7 @@ Tag der Einreichung: \datum
             Die Federkraft \FL wird laut \cite{federkraft} durch
             \begin{equation}
                   \label{eqn: Federkraft}
-                  \FL = -c\cdot s,
+                  \FL = -c\cdot s
             \end{equation}
             berechnet, wobei $c$ die Federkonstante und $s$ die Auslenkung der Feder aus der Ruhelage ist.
 
@@ -632,7 +635,7 @@ Tag der Einreichung: \datum
                   m_2\,\ddot x_2 + a\,(x_2-x_1) - b\,(x_3-x_2) = 0
             \end{equation}
 
-            Nehme man an, man hat Dirichlet-Randbedingungen, also es gelte zum Beispiel $x_1 \equiv 0$, dann würde man die Gleichung
+            Nehme man an, man hat Dirichlet-Randbedingungen, also es gelte zum Beispiel $x_1 \equiv 0$, dann würde man aus (\ref{eqn: Gl für Masse})
 
             \begin{equation}
                   \label{eqn: Gl für Masse mit Rand links}
@@ -640,14 +643,9 @@ Tag der Einreichung: \datum
             \end{equation}
             erhalten.
 
-            In (\ref{eqn: Gl für Masse mit Rand links}) kann die erste Masse als Rand betrachtet werden und in den Systemen aus Abb. \ref{fig: System 1} und \ref{fig: System 2} werden die linken Massen genau eine Gleichung dieser Art erfüllen.
+            In (\ref{eqn: Gl für Masse mit Rand links}) kann die erste Masse als Rand betrachtet werden.
+            Eine Gleichung dieser Form wird daher in den Systemen aus Abb. \ref{fig: System 1} und \ref{fig: System 2} für die linken Massen gelten.
 
-            % Man sieht, dass hier M eine Diagonalmatrix ist, die nur positive Einträge auf der Hauptdiagonalen besitzt.
-            % Sie ist somit insbesondere positiv definit, da alle Minoranten positiv sind.
-
-            % Für den zwei-dimensionalen Fall benötigt man $n^2$ Punkt Massen und für jeden Punkt auch 2 Einträge in $x$, da es nun eine Bewegung in x- und in y-Richtung gibt.
-            % Somit existieren $2\,n^2$ Einträge in $x$, aber jede Masse besitzt nur 2 Verbindungen mehr, somit wird die Steifigkeitsmatrix \K viel größer, aber auch viel schwächer besetzt.
-            
       \section{Ermittlung der Matrizen der Modellprobleme}
             Berechne nun die Matrizen der Systeme.
             Während die Systeme der Gleichungen allgemein gehalten werden, verwende für die endgültige Definition der Matrizen $K$ und $M$
@@ -663,7 +661,6 @@ Tag der Einreichung: \datum
 
             Falls man nun alle Massen, Federkonstanten und Auslenkungen einsetzt, so erhält man nach Umstellen das Gleichungssystem
 
-            
             $$\begin{cases}
                   m\ \ddot x_1 + 2s\,x_1 - s\,x_2 & = 0   \\
                   m\,\ddot x_k -s\,x_{k-1} + 2s\,x_k -s\,x_{k+1} & = 0,\quad k=2,\dots,j-1\\
@@ -671,11 +668,11 @@ Tag der Einreichung: \datum
                   (s+1)\,\ddot x_k -c\,x_{k-1} + 2c\,x_k -c\,x_{k+1} & = 0,\quad k=j+1,\dots,n-1\\
                   (s+1)\,\ddot x_n -c\,x_{n-1}+ 2c\,x_n & = 0
             \end{cases}$$
-            
 
             Dieses System kann man zusammenfassen zu der Gleichung (\ref{eqn: Dgl freie Schwingungen}),
-            wobei \begin{align*}
-                  M &= \diag(m, m, m, s+1, s+1,s+1, s+1,  s+1),\\
+            wobei
+            \begin{align}
+                  M &= \diag(m, m, m, s+1, s+1,s+1, s+1,  s+1),\label{def: M1}\\
                   K &= \begin{pmatrix}
                         2s & -s &  &  &  &  &  &  \\
                         -s &  2s& -s &  &  &  &0  &  \\
@@ -685,11 +682,10 @@ Tag der Einreichung: \datum
                          &  &  &  & -c & 2c & -c &  \\
                          & 0 &  &  &  & -c & 2c &  -c\\
                          &  &  &  &  &  & -c & 2c \\
-                        \end{pmatrix}
-            \end{align*}\\
+                        \end{pmatrix}\label{def: K1}
+            \end{align}\\
 
             Wende dieses Vorgehen auch für das System aus Abb. \ref{fig: System 2} an und erhalte
-
             
             $$\begin{cases}
                   m\ \ddot x_1 + (s_1+s_2)\,x_1 - s_2\,x_2 & = 0   \\
@@ -701,8 +697,9 @@ Tag der Einreichung: \datum
             
 
             Dieses System kann man analog zu oben zu der Gleichung (\ref{eqn: Dgl freie Schwingungen}) umformen.
-            Hier gilt nun aber\begin{align*}
-                  M &= \diag(m, m, s_4, s_4, s_4, s_4, s_4, s_4)\\
+            Hier gilt nun aber
+            \begin{align}
+                  M &= \diag(m, m, s_4, s_4, s_4, s_4, s_4, s_4)\label{def: M2}\\
                   K &= \begin{pmatrix}
                         s_1+s_2 & -s_2 &  &  &  &  &  &  \\
                         -s_2 &  s_2+s_3& -s_3 &  &  &  &0  &  \\
@@ -712,20 +709,20 @@ Tag der Einreichung: \datum
                               &  &  &  & -c & 2c & -c &  \\
                               & 0 & &  &  & -c & 2c &  -c\\
                               &  &  &  &  &  & -c & 2c \\
-                        \end{pmatrix}
-            \end{align*}
+                        \end{pmatrix}\label{def: K2}
+            \end{align}
                   
 % hier muss was über die Eigenschaften gesagt werden
       \section{Zusammenhang Eigenwert und Eigenfrequenz}
             \label{sec: Formel EW}      
             Nach der Ermittlung der zugehörigen Matrizen bestimme nun die Formel für die Eigenkreisfrequenzen eines Systems.
 
-            Da in diesen Systemen die Massen um ihre Ruhelage schwingen und keine weiteren Kräfte wirken, schwingt jede einzelne Masse harmonisch.
-            Nach \cite[S. 380]{maschinendynamikDresig} gilt daher mit $x$ statt $q$:
+            Die Schritte in diesem Abschnitt folgen \cite[S. 380]{maschinendynamikDresig} und \cite[S. 2]{hauptteilTkachuk}.
+            Nach \cite[S. 380]{maschinendynamikDresig} gelte für die Auslenkungen der Massen mit $x$ statt $q$:
             $$x(t) = v\,\exp(i\w t),\ \ \ddot x(t) = -\w^2\,v \exp(i\w t)$$
             mit $v=(v_1,\dots,v_n)^T$ Vektor der Amplituden und der \zitat{noch unbekannten Eigenkreisfrequenz \w}\cite[S. 380]{maschinendynamikDresig}
             
-            Diesen Ansatz kann man in (\ref{eqn: Dgl freie Schwingungen}) einsetzen und erhält nach dividieren durch $\exp(i\w t)\footnote{offensichtlich ist die Division wohldefiniert, da $\exp(i\w t)\ne 0\ \forall \w, t\in\R,$}$:
+            Diesen Ansatz wird in (\ref{eqn: Dgl freie Schwingungen}) eingesetzt und man erhält nach Division durch $\exp(i\w t)\footnote{offensichtlich ist die Division wohldefiniert, da $\exp(i\w t)\ne 0\ \forall \w, t\in\R,$}$:
             
             \begin{equation}
                   \label{eqn: allg EW Problem mit w}
@@ -736,21 +733,44 @@ Tag der Einreichung: \datum
 
             Man will diese Gleichung für $v\ne 0$ lösen, da man sonst eine triviale Lösung erhält, in der keine Masse schwingt.
 
+            Um die Theorie aus Kapitel \ref{sec: EW Problem_Futamura} anzuwenden, so definiere
+            $$\lambda_i := \w_i, i=1,\dots,n$$
 
-% braucht man wohl hier noch nicht
-            Um (\ref{eqn: allg EW Problem mit w}) mit $v\ne 0$ zu erfüllen, muss
-            $$\det\klammer{K-\w^2\,M} = 0$$
-            erfüllt sein.
-% nachschlagen, warum das so ist
+            Es folgt das allgemeine Eigenwertproblem
+            \begin{equation}
+                  \label{eqn: allg EW Problem mit lam}
+                  (K-\lambda\,M)\,v = 0
+            \end{equation}
+
+            Man beachte, dass diese Gleichung genau die Form aus (\ref{eqn: allg EW Problem}) besitzt.
+            Man kann für die vorgestellten Probleme folgern, dass für $N$ aus Kapitel \ref{sec: Futamura} gilt:
+            $$N=\{1,\dots,n\}$$
+
+            Da die Massenmatrizen aus (\ref{def: M1}) und (\ref{def: M2}) hier Diagonalmatrizen mit positiven Einträgen auf der Diagonalen sind. Somit sind auch alle Eigenwerte positiv.
+
+            Für reguläre Massenmatrizen gelte nach \cite[S. 376]{matrixGolub} für (\ref{eqn: allg EW Problem mit lam}):
+            $$(K-\lambda\,M)\,v = 0 \Leftrightarrow (M\inv K-\lambda\In)\,v=0$$
+            und folglich
+            $$\lambda(K, M) =\lambda(M\inv K,\In) = \lambda(M\inv K)$$
+
+            Somit sind die Eigenwerte des Matrix-Pencils $K-\lambda M$ und der Matrix $M\inv K$ äquivalent.
+
+            Da auch $M\inv$ eine Diagonalmatrix ist, so ist $M\inv K$ für die vorgestellten Systeme symmetrisch.
+            Es gilt daher für die Systeme aus Abb. \ref{fig: System 1} und \ref{fig: System 2}
+            \begin{equation}
+                  \label{eqn: alle Ew reell}
+                  \lambda(K, M) = \lambda(M\inv K) \subset \R
+            \end{equation}
+            wobei \cite[S. 393]{matrixGolub} angewendet wurde.
+
+            Durch Bemerkung \ref{bem: B reg impl pencil reg} folgt ferner, dass die Matrix-Pencil der Systeme regulär sind.
 
 \chapter{Zählung von Eigenwerten}
 \label{sec: EW Zählung}
 % vielleicht eher Finden der Zielfunktion nennen
 % es fehlt noch: Einführung s und Erklärung, warum nun lambda statt w^2
-% vorher war immer von n' die Rede, jetzt gibt es nur noch n?      
       Nun wende man sich dem Finden einer Zielfunktion zu, die die Anzahl der Eigenwerte auf einem Intervall beschreibt.
-      Diese Funktion soll von dem Design-Parameter $s$ (vgl. \cite[S. 2]{hauptteilTkachuk}) abhängen und schlussendlich minimiert werden,
-      um ein $s$ aus der zulässigen Menge $\Omega$ zu finden, für welches die Zielfunktion minimal ist, also kein Eigenwert in dem vorgegebenen Intervall liegt.
+      Diese Funktion hängt von dem Design-Parameter $s$ (vgl. \cite[S. 2]{hauptteilTkachuk}) ab und wird offenbar minimal, wenn kein Eigenwert des Matrix-Pencils in dem Intervall liegt.
       
       \section{Vorüberlegungen}
             Die in diesem Abschnitt erwähnten Schritte stammen aus \cite[S. 2-4]{hauptteilTkachuk}.
@@ -775,9 +795,9 @@ Tag der Einreichung: \datum
 
             $$\mu := \sum_{j=1}^{n} h(\lambda_j)$$
 
-            Obwohl diese Funktion korrekt ist, so gibt es doch einige Schwachstellen, sollte man diese Funktion minimieren wollen:
+            Obwohl diese Funktion die Anzahl der Eigenwerte korrekt beschreibt, so gibt es einige Schwachstellen, sollte man diese Funktion minimieren wollen:
 % wie kann eine Funktion korrekt sein?
-            Die Funktion ist nicht stetig differenzierbar und entscheidender: sie ist eine Treppenfunktion, damit sind alle Ableitungen gleich 0, also unbrauchbar für Minimierungsalogrithmen, die mit der Ableitung arbeiten.
+            Die Funktion ist nicht stetig differenzierbar und eine Treppenfunktion, damit sind alle Ableitungen gleich 0, also unbrauchbar für Minimierungsalogrithmen, die mit der Ableitung arbeiten.
 
             Diese Probleme kann man abfedern, indem man die Funktion auf dem Intervall $[\lambda_a, \lambda_b]$ gewichtet.
 % abfedern
