--- a/Ausarbeitung/Ausarbeitung.tex
+++ b/Ausarbeitung/Ausarbeitung.tex
@@ -1003,7 +1003,7 @@ Tag der Einreichung: \datum
 \chapter{Implementierung}
 \label{sec: Programmieren}
       \section{Erklärungen}
-            Um die Funktion (\ref{eqn: JGleichIntTr}) zu minimieren, verwende eine Variation des Gradientenverfahrens aus \cite[S. 285]{optimierung}:
+            Um die Funktion (\ref{eqn: JGleichIntTr}) zu minimieren, verwende eine Variation des Gradientenverfahrens aus \cite[S. 285]{optimierungBurkhard}:
             Die Schrittweite $\lambda_*$ sei immer 
             
 
