NM  und Github hinzugefügt

--- a/Ausarbeitung/Literatur.bib
+++ b/Ausarbeitung/Literatur.bib
@@ -210,3 +210,19 @@
     year = {2013},
     url = { https://katalog.slub-dresden.de/id/0-1859628885 }
 }
+
+@misc {numerikHermann,
+    author = { Hermann, Martin },
+    title = { Numerische Mathematik },
+    edition = { 3. überarb. und erw. Aufl. } ,
+    publisher = {Oldenbourg},
+    isbn = {9783486719703},
+    year = {2012},
+    url = { https://katalog.slub-dresden.de/id/0-1651937834 }
+}
+
+@online{github,
+    author = {Noah Göpel},
+    url = {https://github.com/NextGen73/Bachelor_GewEwZaehlung},
+    urldate = {2024-09-15T21:25:00},
+}
